--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
