--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Invoices app",
+  "name": "InvoicesApp",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8000",
@@ -23,6 +23,7 @@
     "lodash.isempty": "^4.4.0",
     "lodash.last": "^3.0.0",
     "lodash.merge": "^4.6.2",
+    "moment": "latest",
     "prop-types": "^15.7.2",
     "qs": "^6.9.0",
     "react": "^16.12.0",
@@ -36,7 +37,7 @@
     "react-router-dom": "^5.1.0",
     "react-scripts": "^3.2.0",
     "react-sortable-hoc": "^1.10.1",
-    "moment": "latest"
+    "socket.io-client": "^2.3.0"
   },
   "resolutions": {
     "react-helmet/react-side-effect": "2.1.0"
